--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
   "dependencies": {
     "@koa/cors": "^3.4.1",
     "@koa/router": "^12.0.0",
+    "axios": "^1.1.3",
+    "dotenv": "^16.0.3",
     "koa": "^2.13.4",
     "koa-bodyparser": "^4.3.0",
     "koa-pino-logger": "^4.0.0"
