--- a/package.json
+++ b/package.json
@@ -16,11 +16,6 @@
   "license": "MIT",
   "devDependencies": {
     "@types/jest": "29.0.1",
-    "@types/koa": "2.13.5",
-    "@types/koa__cors": "^3.3.0",
-    "@types/koa__router": "12.0.0",
-    "@types/koa-bodyparser": "4.3.8",
-    "@types/koa-pino-logger": "3.0.1",
     "@types/supertest": "2.0.12",
     "@typescript-eslint/eslint-plugin": "5.37.0",
     "eslint": "8.23.1",
@@ -28,19 +23,24 @@
     "eslint-plugin-import": "2.26.0",
     "eslint-plugin-node": "11.1.0",
     "jest": "29.0.3",
-    "nodemon": "2.0.19",
     "supertest": "6.2.4",
     "ts-jest": "29.0.0",
-    "ts-node": "10.9.1",
     "typescript": "4.8.3"
   },
   "dependencies": {
+    "@types/koa": "2.13.5",
+    "@types/koa__cors": "^3.3.0",
+    "@types/koa__router": "12.0.0",
+    "@types/koa-bodyparser": "4.3.8",
+    "@types/koa-pino-logger": "3.0.1",
+    "nodemon": "2.0.19",
     "@koa/cors": "^3.4.1",
     "@koa/router": "^12.0.0",
     "axios": "^1.1.3",
     "dotenv": "^16.0.3",
     "koa": "^2.13.4",
     "koa-bodyparser": "^4.3.0",
-    "koa-pino-logger": "^4.0.0"
+    "koa-pino-logger": "^4.0.0",
+    "ts-node": "10.9.1"
   }
 }
